# agentgateway-new-ui

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build-replace-agentgateway.sh  go.mod  go.sum  rust-toolchain.toml  tmp-config.yaml  tmp-mcp-config.yaml
.claude/commands/: fix-cves.md  fix-ui-cves.md
.github/: dependabot.yml
.github/workflows/: debug_cache.yml  nightly.yml  pull_request.yml  release.yml  ui-e2e.yml
api/: resource.pb.go  resource_json.gen.go
architecture/: cel.md
controller/: .golangci.yaml  Makefile
controller/api/annotations/: agentgateway.go
controller/api/settings/: settings.go  settings_test.go
controller/api/tests/: agentgateway_policy_test.go
controller/cmd/agctl/: main.go
controller/cmd/agentgateway/: main.go
controller/hack/crdgen/: main.go
controller/pkg/admin/: logging.go  response.go  response_test.go  server.go
controller/pkg/apiclient/: filters.go  types.go
controller/pkg/cli/: root.go
controller/pkg/controller/: controller.go  gatewayclass.go  gw_controller.go  metrics.go  start.go  start_test.go
controller/pkg/deployer/: agentgateway_parameters.go  agentgateway_parameters_test.go  charts.go  deployer.go  deployer_factory.go  deployer_test.go  gateway_parameters.go  tls.go  values_helpers.go
controller/pkg/helm/: embed.go
controller/pkg/reports/: reporter.go  reporter_test.go  status.go
controller/pkg/schemes/: scheme.go
controller/pkg/setup/: authn.go  controlplane.go  setup.go
controller/pkg/syncer/: README.md  backend_collections.go  mesh_config.go  mesh_config_test.go  option.go  policy_collections.go  service.go  status_syncer.go  status_syncer_test.go  syncer.go  workloads.go
controller/test/deployer/: deployer_helm.go  internal_helm_test.go  testutils.go
controller/test/e2e/: test.go
controller/test/setup/: setup-kind-ci.sh
controller/test/testutils/: crd.go  env.go  file_loader.go  project.go
crates/agentgateway/: Cargo.toml
crates/agentgateway-app/: Cargo.toml
crates/agentgateway-app/src/commands/: oneshot.rs  run.rs
crates/agentgateway/src/: agentcore.rs  app.rs  aws.rs  config.rs  lib.rs  serdes.rs  state_manager.rs
crates/agentgateway/tests/: validate_examples.rs
crates/cel-fork/cel/: Cargo.toml
crates/cel-fork/cel/src/: functions.rs  macros.rs  objects.rs  optimize.rs  test.rs
crates/cel-fork/cel/src/parser/: parser.rs
crates/cel-fork/cel/src/types/: dynamic.rs
crates/celx/: Cargo.toml
crates/celx/src/: benches.rs  function_tests.rs  general.rs  strings.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  readiness.rs  telemetry.rs  test_helpers.rs  timestamp.rs
crates/hbone/src/: pool.rs
crates/htpasswd-verify-fork/src/: lib.rs  md5.rs
crates/pool/: Cargo.toml  README.md
crates/pool/src/: blackbox_tests.rs  client.rs  lib.rs  pool.rs
crates/pool/src/common/: mod.rs  timer.rs
crates/pool/src/connect/: http.rs  mod.rs
crates/pool/src/rt/: mod.rs  tokio.rs
crates/pool/src/service/: mod.rs
crates/protos/proto/: resource.proto
crates/xds/: Cargo.toml
crates/xds/src/: client.rs  lib.rs
examples/: README.md
examples/ai-prompt-guard/: azure-content-safety-config.yaml  bedrock-config.yaml
examples/delegation/: README.md  config.yaml
examples/mcp-authentication/keycloak/: docker-compose.yml  mcp-realm.json
examples/oauth2-proxy/: README.md  docker-compose.yaml
examples/oidc/: README.md  agentgateway-realm.json  config.yaml  docker-compose.yaml
examples/standalone-epp/: README.md  config.yaml
schema/: cel-functions.md  cel.json  cel.md  config.json  config.md
tools/: check_clean_repo.sh  go.mod  go.sum  manage-validation-deps.sh  report_build_info.sh  schema-to-md.sh  schema_paths.jq  validate-configs.sh
ui/: .gitignore  .oxlintrc.json  .prettierignore  .prettierrc.yaml  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.test.json  vite.config.ts
ui/public/: cel-schema.json  cel.d.ts  config-schema.json  config.d.ts
ui/scripts/: generate-schema.mjs
ui/src/: App.tsx  cel.d.ts  config.d.ts  main.tsx
ui/src/api/: client.ts  config.ts  crud.ts  helpers.ts  hooks.ts  index.ts  logTypes.ts  mockLogs.ts  mockMetrics.ts  types.ts
ui/src/components/: AgentgatewayLogo.tsx  Breadcrumbs.tsx  ConfirmModal.tsx  ErrorBoundary.tsx  ProtocolTag.tsx  StyledAlert.tsx  StyledSelect.tsx
ui/src/contexts/: ConfirmContext.tsx  (+6 more)
ui/tests/: celPlayground.spec.ts  dashboard.spec.ts  llmLogs.spec.ts  mcpLogs.spec.ts  trafficHierarchy.spec.ts  trafficLogs.spec.ts  utils.ts
(+666 files in other folders)
