[package]
name = "agentgateway-app"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }

[[bin]]
name = "agentgateway"
path = "src/main.rs"
bench = false

[features]
default = []
jemalloc = ["dep:tikv-jemallocator", "agentgateway/jemalloc"]
schema = ["agentgateway/schema"]

[dependencies]
agent-core.workspace = true
agentgateway.workspace = true
anyhow.workspace = true
clap.workspace = true
fs-err = { workspace = true, features = ["tokio"] }
libc.workspace = true
tokio.workspace = true
tracing.workspace = true
tikv-jemallocator = {workspace = true, optional = true}

[lints.clippy]
# This rule makes code more confusing
assigning_clones = "allow"
# This doesn't understand `strng` which we use everywhere
borrow_interior_mutable_const = "allow"
declare_interior_mutable_const = "allow"
