[package]
name = "agent-celx"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }

[lib]
path = "src/lib.rs"

[[bench]]
name = "cel_bench"
harness = false
required-features = ["internal_benches"]

[features]
internal_benches = ["divan"]

[dependencies]
cel.workspace = true
rand.workspace = true
base64.workspace = true
hex.workspace = true
ipnet.workspace = true
regex.workspace = true
serde_json.workspace = true
serde.workspace = true
md-5.workspace = true
sha1.workspace = true
sha2.workspace = true
uuid.workspace = true
serde_regex.workspace = true
vector-map.workspace = true
divan = { workspace = true, optional = true }

[dev-dependencies]
anyhow.workspace = true
assert_matches.workspace = true
