[package]
name = "cel"
description = "A parser and interpreter for the Common Expression Language (CEL)"
repository = "https://github.com/cel-rust/cel-rust"
version = "0.13.0"
authors = ["Clark McCauley <me@clarkmccauley.com>", "Alex Snaps <alex@wcgw.dev>"]
edition = "2024"
rust-version = "1.87.0"
license = "MIT"
categories = ["compilers"]

[dependencies]
antlr4rust = "0.5.2"
lazy_static = "1.5.0"
nom = "7.1.3"
chrono = { version = "0.4", default-features = false, features = ["alloc", "serde"] }
regex = { version = "1.10.5"}
serde = "1.0"
erased-serde = "0.4"
serde_json = { version = "1.0"}
base64 = { version = "0.22.1"}
bytes = { version = "1"}

thiserror = "2.0"
paste = "1.0"
hashbrown = "0.16.1"
vector-map = { version = "1.0.2", features = ["serde_impl"] }
itertools = "0.14.0"
http = "1.4.0"
cel-derive = { path = "../cel-derive" }
arcstr = "1.2.0"

[target.'cfg(target_os = "linux")'.dev-dependencies]
pprof = { version = "0.15", features = ["protobuf", "protobuf-codec", "criterion"] }
[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
serde_bytes = "0.11.14"
dhat = { version = "0.3.3" }
tracking-allocator = "0.4.0"

[[bench]]
name = "runtime"
harness = false

[features]
default = []
dhat-heap = [] # if you are doing heap profiling
